# OGFViewer

./: .clang-format  .gitignore  CMakeLists.txt  ChildView.cpp  OGFLoader.cpp  OGFViewer.rc  OGFViewer.sln  OGFViewer.vcxproj  OGFViewer.vcxproj.filters  README.md  stdafx.cpp  stdafx.h
Libraries/glew-2.3.1/: CMakeLists.txt
Libraries/glext/: CMakeLists.txt
Libraries/nv_dds/: CMakeLists.txt  nv_dds.cpp  nv_dds.h  nv_dds.vcxproj  nv_dds.vcxproj.filters
Source/Application/: CMakeLists.txt  ChildView.cpp  ChildView.h  MainFrm.cpp  OGFLoader.cpp  OGFLoader.h  OGFModel.cpp  OGFViewer.cpp  OGFViewer.h  OGFViewer.vcxproj  OGFViewer.vcxproj.filters  Types.h  pch.cpp  pch.h
Source/Application/Resources/: OGFViewer.rc  resource.h
